# agent-tasker-mcp-server

./: .gitignore  README.md  SKILL.md  agent_tasker.py  package.json  pyproject.toml  requirements.txt  server.json  setup.sh
.github/workflows/: release.yml
agent_tasker_mcp/: __init__.py  common.py  models.py  registry.py  server.py  version.py
agent_tasker_mcp/executors/: basic.py  discovery.py  http.py
examples/: basic_usage.py  concurrent_api_calls.py  parallel_file_processing.py
tests/: test_execution.py  test_packaging.py  test_protocol.py  test_smoke.py
