[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tasker-mcp-server"
version = "1.0.1"
description = "Minimal stdio MCP server for parallel task execution by AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Sebastian Robles" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
  "mcp",
  "model-context-protocol",
  "ai-agent",
  "claude",
  "parallel",
  "automation"
]

[project.urls]
Homepage = "https://github.com/S3bRR/agent-tasker-mcp"
Repository = "https://github.com/S3bRR/agent-tasker-mcp"
Documentation = "https://github.com/S3bRR/agent-tasker-mcp#readme"
Issues = "https://github.com/S3bRR/agent-tasker-mcp/issues"

[project.scripts]
agent-tasker-mcp-server = "agent_tasker_mcp.server:cli"

[tool.setuptools]
packages = ["agent_tasker_mcp", "agent_tasker_mcp.executors"]
